force-app/main/default/objects/Audit__c/Audit__c.object-meta.xml
<CustomObject>
    <description>Immutable business audit events for loan status, high-value review, email, and integration outcomes.</description>
    <label>Audit</label>
    <nameField>
        <displayFormat>AUD-{000000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>