force-app/main/default/objects/Audit__c/fields/ActorUser__c.field-meta.xml
<CustomField>
    <fullName>ActorUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Initiating user when applicable.</description>
    <label>Actor User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Events_Acted</relationshipName>
    <type>Lookup</type>
</CustomField>