force-app/main/default/objects/Audit__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Transaction/integration correlation identifier. Not unique across events.</description>
    <label>Correlation Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>