force-app/main/default/objects/Audit__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related customer when available for customer-centric audit review.</description>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Audit Events</relationshipLabel>
    <relationshipName>Audit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>