force-app/main/default/objects/Audit__c/fields/CustomerNameSnapshot__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameSnapshot__c</fullName>
    <description>Customer name at event time.</description>
    <label>Customer Name Snapshot</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>