force-app/main/default/objects/Audit__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Sanitized summary only. No secrets, tokens, raw payloads, or unnecessary PII.</description>
    <label>Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>