force-app/main/default/objects/Audit__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>Distinguishes Apex, Flow, email, and integration audit events.</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STATUS_CHANGED</fullName>
            </value>
            <value>
                <fullName>HIGH_VALUE_STATUS_REVIEW</fullName>
            </value>
            <value>
                <fullName>APPROVAL_EMAIL_SENT</fullName>
            </value>
            <value>
                <fullName>INTEGRATION_RESULT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>