force-app/main/default/objects/Audit__c/fields/LoanAmountSnapshot__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountSnapshot__c</fullName>
    <description>Loan amount at event time for threshold and decision context.</description>
    <label>Loan Amount Snapshot</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>