force-app/main/default/objects/Audit__c/fields/LoanRequest__c.field-meta.xml
<CustomField>
    <fullName>LoanRequest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related loan for business events. Required by validation for all current event types.</description>
    <label>Loan Request</label>
    <referenceTo>LoanRequest__c</referenceTo>
    <relationshipLabel>Audit Events</relationshipLabel>
    <relationshipName>Audit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>