force-app/main/default/objects/Audit__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <description>New relevant state snapshot.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>