force-app/main/default/objects/Audit__c/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>Business event time (may differ from CreatedDate for async work).</description>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>