force-app/main/default/objects/Audit__c/listViews/Integration_Audit_Events.listView-meta.xml
<ListView>
    <fullName>Integration_Audit_Events</fullName>
    <columns>NAME</columns>
    <columns>EventType__c</columns>
    <columns>LoanRequest__c</columns>
    <columns>Source__c</columns>
    <columns>OccurredAt__c</columns>
    <columns>CorrelationId__c</columns>
    <columns>NewValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventType__c</field>
        <operation>equals</operation>
        <value>INTEGRATION_RESULT</value>
    </filters>
    <label>Integration Audit Events</label>
</ListView>