force-app/main/default/objects/Audit__c/listViews/Recent_Audit_Events.listView-meta.xml
<ListView>
    <fullName>Recent_Audit_Events</fullName>
    <columns>NAME</columns>
    <columns>EventType__c</columns>
    <columns>LoanRequest__c</columns>
    <columns>Customer__c</columns>
    <columns>Source__c</columns>
    <columns>OccurredAt__c</columns>
    <columns>CorrelationId__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Audit Events</label>
</ListView>